--- a/miniprogram/pages/after-capture/after-capture.wxss
+++ b/miniprogram/pages/after-capture/after-capture.wxss
@@ -1,1 +1,10 @@
-/* pages/after-capture/after-capture.wxss */
+.main {
+  height: calc(100vh - 500rpx);
+  padding: 0 64rpx;
+}
+.main .desc {
+  font-size: 30rpx;
+  color: #6c6c6c;
+  margin-bottom: 64rpx;
+  text-align: center;
+}
