--- a/miniprogram/pages/index/components/chat-list/chat-list.less
+++ b/miniprogram/pages/index/components/chat-list/chat-list.less
@@ -1,4 +1,5 @@
-@import (css) './templates/chat-item.wxss';
+@import './templates/chat-item.less';
+@import "/styles/common.less";
 
 .main {
   background-color: white;
