--- a/miniprogram/subPack-a/pages/chat-detail/chat-detail.less
+++ b/miniprogram/subPack-a/pages/chat-detail/chat-detail.less
@@ -1,5 +1,5 @@
-@import (css) "/styles/common.wxss";
-@import (css) './templates/record-item.wxss';
+@import "/styles/common.less";
+@import './templates/record-item.less';
 
 page {
   background-color: #EDEDED;
