--- a/miniprogram/pages/after-capture/after-capture.less
+++ b/miniprogram/pages/after-capture/after-capture.less
@@ -2,6 +2,28 @@
   height: calc(100vh - 500rpx);
   padding: 0 64rpx;
 
+  .process-block {
+    margin-bottom: 32rpx;
+
+    .item {
+      &+.item {
+        margin-left: 16rpx;
+      }
+
+      .cover {
+        width: auto;
+        height: 300rpx;
+        border-radius: 12rpx;
+        overflow: hidden;
+        margin-bottom: 12rpx;
+      }
+
+      .text {
+        font-size: 24rpx;
+      }
+    }
+  }
+
   .desc {
     font-size: 30rpx;
     color: #6c6c6c;
